# acm_forecast

./: .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION_COMPARISON.md  INSTALLATION.md  LOCAL_SETUP_GUIDE.md  MANIFEST.in  MODEL_DOCUMENTATION.md  MODULE_USAGE_GUIDE.md  Makefile  PACKAGING.md  PLOTLY_SUBPLOT_FIX.md  PROJECT_SUMMARY.md  PYSPARK_OPTIMIZATION_GUIDE.md  QUICK_START.md  README.md  RUN_FORECAST_GUIDE.md  docker-compose.azure.yml.example  docker-compose.common.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-minimal.txt  requirements.txt  requirements_local.txt  run_complete_pipeline.py  run_forecast.py  run_training.py  test_data_generation.py  test_installation.py  test_installation_simple.py
acm_forecast/: MODEL_DOCUMENTATION.md  MODULE_USAGE_GUIDE.md  README.md  __init__.py
acm_forecast/builds/: acm_forecast-1.0.0-py3-none-any.whl
acm_forecast/config/: README.md  config.example.yaml  config.yaml  specifications.py
acm_forecast/core/: __init__.py  app_runner.py  base_plugin.py  interfaces.py  plugin_registry.py
acm_forecast/data/: data_preparation.py  data_quality.py  data_source.py  feature_engineering.py
acm_forecast/evaluation/: model_evaluator.py  performance_metrics.py
acm_forecast/examples/: README_E2E.md  RUN_FORECAST_GUIDE.md  __init__.py  config_end_to_end.yaml  run_complete_pipeline.py  run_end_to_end.py  run_forecast.py  run_training.py  use_yaml_config.py
acm_forecast/models/: __init__.py  arima_model.py  prophet_model.py  xgboost_model.py
acm_forecast/monitoring/: __init__.py  data_drift_monitor.py  performance_monitor.py
acm_forecast/pipeline/: forecast_pipeline.py  training_pipeline.py
acm_forecast/plugins/: __init__.py
acm_forecast/registry/: __init__.py  model_registry.py  model_versioning.py
data/: .gitkeep  forecasting_data.pkl  test_sample_azure_costs.csv
logs/: .gitkeep
notebooks/: .gitkeep  01_data_generation.ipynb  03_prophet_model.ipynb  04_arima_model.ipynb  05_xgboost_model.ipynb
notebooks/.ipynb_checkpoints/: 02_data_exploration-checkpoint.ipynb  03_prophet_model-checkpoint.ipynb  04_arima_model-checkpoint.ipynb  05_xgboost_model-checkpoint.ipynb
outputs/: .gitkeep
pandas/: README.md  requirements.txt
pandas/data/: daily_costs_aggregated.csv  sample_azure_costs_small.csv
pandas/notebooks/: 03_prophet_model.ipynb  04_arima_model.ipynb  05_xgboost_model.ipynb  06_model_comparison.ipynb
pyspark/: PERFORMANCE_BENEFITS.md  PYSPARK_OPTIMIZATION_GUIDE.md  README.md  requirements.txt  test_performance_comparison.py
pyspark/notebooks/: 01_data_generation_pyspark.ipynb  01_data_generation_pyspark.py  01_data_generation_pyspark_optimized.py  02_data_exploration_pyspark.py  02_data_exploration_pyspark_optimized.py  03_prophet_model_pyspark.py  03_prophet_model_pyspark_optimized.py  04_arima_model_pyspark.py  05_xgboost_model_pyspark.py  06_model_comparison_pyspark.py
pyspark/utils/: data_utils.py
scripts/: EXTRACTED_SCHEMA.md  README_SAMPLE_DATA.md  REQUIRED_COLUMNS.md  create_test_delta_table.py  generate_sample_cost_data.py  run_tests_in_docker.sh
src/: README.md  __init__.py
src/config/: README.md  __init__.py  config.example.yaml  config.yaml  settings.py
src/data/: __init__.py  data_preparation.py  data_quality.py  data_source.py  feature_engineering.py
src/evaluation/: __init__.py  model_comparison.py  model_evaluator.py
src/examples/: __init__.py  run_complete_pipeline.py  run_forecast.py  run_training.py  use_yaml_config.py
src/models/: arima_model.py  prophet_model.py  xgboost_model.py
src/monitoring/: data_drift_monitor.py  performance_monitor.py  retraining_scheduler.py
src/pipeline/: __init__.py  forecast_pipeline.py  training_pipeline.py
src/registry/: __init__.py  model_registry.py  model_versioning.py
tests/: README.md  TESTING_SUMMARY.md  conftest.py
tests/config/: test_config.yaml
tests/e2e/: __init__.py  test_app_runner.py  test_full_pipeline.py
tests/integration/: test_config_pipeline.py  (+3 more)
utils/: data_utils.py
(+27 files in other folders)
